--- a/package.json
+++ b/package.json
@@ -4,21 +4,25 @@
   "main": "expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
+    "axios": "^1.7.2",
     "expo": "~51.0.21",
     "expo-linear-gradient": "~13.0.2",
     "expo-status-bar": "~1.12.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.74.3",
-    "react-native-safe-area-context": "^4.10.8"
+    "react-native-fs": "^2.20.0",
+    "react-native-safe-area-context": "^4.10.8",
+    "react-native-webview": "^13.8.6",
+    "react-navigation": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
