--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-material/core": "^1.3.7",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "axios": "^1.7.2",
@@ -21,6 +22,7 @@
     "react-native": "0.74.3",
     "react-native-fs": "^2.20.0",
     "react-native-safe-area-context": "^4.10.8",
+    "react-native-vector-icons": "^10.1.0",
     "react-native-webview": "^13.8.6",
     "react-navigation": "^5.0.0"
   },
