--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "axios": "^1.7.2",
+    "eas": "^0.1.0",
     "expo": "~51.0.21",
     "expo-linear-gradient": "~13.0.2",
     "expo-status-bar": "~1.12.1",
